kermeta_projects/fr.irisa.triskell.kermeta.io/src/test/resources/constraintchecker_tests/invalid/005_superoperations_parammismatch1_inv.kmt
/* $Id: 005_superoperations_parammismatch1_inv.kmt,v 1.3 2007-10-16 11:49:10 ftanguy Exp $ */

// Test of constraints on operations
// This test must make specific errors to appear. 

package root_package;

require kermeta

using kermeta::standard



class A
{
   operation m(x : Object) : String is do
		result := void
   end
}

class B inherits A
{
   method m(x : String) : String is do
		result := void
   end
}
